test/tests/stages/5_local_variables/valid/extra_credit/postfix_precedence.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[30]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(a)
  =
  const int(1)
  ;
  int
  identifier(b)
  =
  !
  identifier(a)
  ++
  ;
  return
  (
  identifier(a)
  ==
  const int(2)
  &&
  identifier(b)
  ==
  const int(0)
  )
  ;
  }
