test/tests/stages/5_local_variables/invalid_semantics/extra_credit/undeclared_compound_assignment.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[14]:
  int
  identifier(main)
  (
  void
  )
  {
  identifier(a)
  +=
  const int(1)
  ;
  return
  const int(0)
  ;
  }
